--- a/Arkanoid/Arkanoid/Arkanoid.csproj
+++ b/Arkanoid/Arkanoid/Arkanoid.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ball.cs" />
     <Compile Include="ControlsManager.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
