--- a/Arkanoid/Arkanoid/Arkanoid.csproj
+++ b/Arkanoid/Arkanoid/Arkanoid.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Ball.cs" />
     <Compile Include="ControlsManager.cs" />
+    <Compile Include="HUD.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
