Improved collision, added lots of small features.

--- a/Arkanoid/Arkanoid/Arkanoid.csproj
+++ b/Arkanoid/Arkanoid/Arkanoid.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Cell.cs" />
     <Compile Include="CellSet.cs" />
     <Compile Include="ControlsManager.cs" />
-    <Compile Include="GameManager.cs" />
+    <Compile Include="ConfigManager.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,7 +86,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
-    <Content Include="gameconfig.xml" />
     <Content Include="GameThumbnail.png">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </Content>
